# eyeq

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md
scripts/: install-vmaf.sh  install.sh
src/: butteraugli.cpp  butteraugli.h  dssim.cpp  dssim.h  eyeq.cpp  fsim.cpp  fsim.h  image.h  mdsi.cpp  mdsi.h  metrics.h  psnr.h  psnr_hvs.h  rgb24.cpp  rgb24.h  ssim.h  ssimulacra2.cpp  ssimulacra2.h  ssimulacra2_hwy.cpp  ssimulacra2_hwy.h  vmaf.h  xpsnr.cpp  xpsnr.h
